tests/type_errors/record_merge_pick.sy
def main : _ : = let { a } = { a: "ABC" } in a + 1

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Str
--+ ----
--+ Int
--+ 
--+   1| def main : _ : = let { a } = { a: "ABC" } in a + 1
--+                                                     ^

